Added auth0-spa-js from Auth0's CDN.

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             </div>
         </footer>
 
-
+        <script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js"></script>
 
         <script type="text/javascript" data-cfasync="false">
             /*<![CDATA[/* */
