Added login and logout integration

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                                     <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
                                 <li class="nav-item">
-                                    <button id="btn-login" class="nav-link" disabled="true" onclick="login()">Log in</button>
+                                    <button id="btn-login"  disabled="true" onclick="login()">Log in</button>
                                    
                                 </li>
                                 <li class="nav-item">
-                                    <button class="nav-link" id="btn-logout" disabled="true" onclick="logout()">Log out</button>
+                                    <button id="btn-logout" disabled="true" onclick="logout()">Log out</button>
                                    
                                 </li>
                             </ul>
