--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <div class="hero-area">
 
         <div class="hero-slides owl-carousel">
-            <div class="single-hero-slide bg-img background-overlay"
-                style="background-image: url(https://camo.githubusercontent.com/889f9d29c56462a22df180eeea137177bf6f800abe16fa6095559c0d9789e615/68747470733a2f2f692e706f7374696d672e63632f714d7054724c70642f312e706e67);"></div>
+            <!-- <div class="single-hero-slide bg-img background-overlay"
+                style="background-image: url(https://camo.githubusercontent.com/889f9d29c56462a22df180eeea137177bf6f800abe16fa6095559c0d9789e615/68747470733a2f2f692e706f7374696d672e63632f714d7054724c70642f312e706e67);"></div> -->
             <div class="single-hero-slide bg-img background-overlay"
                 style="background-image: url(img/core-img/ad1.png);"></div>
             <div class="single-hero-slide bg-img background-overlay"
