--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
                 <div class="col-md-4 col-4 stats">
                     <i class="fa fa-code" aria-hidden="true"></i>
                     <div class="counting" data-count="900000">500GB+</div>
-                    <h5>Total Data Served</h5>
+                    <h5>Data Served</h5>
                 </div>
     
                 <div class="col-md-4 col-4 stats">
                     <i class="fa fa-check" aria-hidden="true"></i>
                     <div class="counting" data-count="280">200 PDF+</div>
-                    <h5>Total Notes Available</h5>
+                    <h5>Notes Available</h5>
                 </div>
     
                 <div class="col-md-4 col-4 stats">
