--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             </a>
                         </div> -->
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.ml/0:/First%20Year/" target="_blank">
+                            <a href="https://notes.studytub.tk/0:/First%20Year/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -155,7 +155,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.ml/0:/First%20Year/" target="_blank">
+                            <a href="https://notes.studytub.tk/0:/First%20Year/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -168,7 +168,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.ml/0:/3rd%20Sem/" target="_blank">
+                            <a href="https://notes.studytub.tk/0:/3rd%20Sem/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="thumbnail  shadow-lg p-3 mb-5 bg-white rounded">
@@ -183,7 +183,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.ml/0:/4th%20Sem/" target="_blank">
+                            <a href="https://notes.studytub.tk/0:/4th%20Sem/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="thumbnail  shadow-lg p-3 mb-5 bg-white rounded">
@@ -196,7 +196,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.ml/0:/5th%20sem/" target="_blank">
+                            <a href="https://notes.studytub.tk/0:/5th%20sem/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="thumbnail  shadow-lg p-3 mb-5 bg-white rounded">
@@ -210,7 +210,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.ml/0:/6th%20sem/" target="_blank">
+                            <a href="https://notes.studytub.tk/0:/6th%20sem/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                                     <div class="thumbnail  shadow-lg p-3 mb-5 bg-white rounded">
                                         <img src="img/core-img/sem6.gif" alt="">
