--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             </a>
                         </div> -->
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.tk/0:/First%20Year/" target="_blank">
+                            <a href="https://drive.google.com/drive/folders/1MjlsfKVDf3_Q-nVuUA5CDPfbCIbuj_CW" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -124,6 +124,19 @@
                                 </div>
                             </a>
                         </div>
+                        <!-- <div class="col-12 col-md-4 col-lg-4">
+                            <a href="https://notes.studytub.tk/0:/First%20Year/" target="_blank">
+                                <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
+
+                                    <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
+                                        <img src="img/core-img/sem1.gif" alt="1stsem">
+                                        <div class="post-content d-flex align-items-center justify-content-between">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div> -->
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.tk/0:/First%20Year/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
