Update studytub sem 1

--- a/pages/1stsem.html
+++ b/pages/1stsem.html
@@ -97,7 +97,7 @@
                     <div class="row">
 
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1lYClMPZ9M3yDUX2GxY2E2fXeY64bKCNA?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/MATH-1/"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
@@ -112,7 +112,7 @@
                         </div>
 
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1cqypVUnYDg93HwcE5BYKWfrXtp3-5kev?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/MATH-2/"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
@@ -126,7 +126,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/17GQOlXFU_wC0JlRTN3HKA8-3m0Bx2QYS?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/PHYSICS/"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
@@ -140,7 +140,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1CMx7JmuZF659EsGBfnxaRTXGdl-fUmrj?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/Chem/"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
@@ -154,7 +154,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1q-sVTBZJaLUTx4_qVFsCtFbc3oPxDyRU?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/C-PROG./"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
@@ -168,7 +168,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1TlrQQ2eQby0YmtqKQ79RoywDojV2Og_9?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/Data-structure/"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
@@ -182,7 +182,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/10GQHhkkkUexbMHDtVDt82TSn5k62SnEg?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/Envs/"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
@@ -196,7 +196,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1jzRc-IBHAw2FEbPCGFt1ol8Cc58yTpLG?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/BEE+BEE-LAB/"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
@@ -210,7 +210,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1biG75AA2NBOb_khjlTt0LUlFFClbO4oD?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/BE/"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
@@ -224,7 +224,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1326LW721jp31Ex1ExeLyuNj4Q--NE6ch?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/Manufacturing%20Practices/"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
@@ -238,7 +238,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1-YZf4cQ3fTG6qbuXz06NPJTdcD6GHtK7?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/Engineering%20Graphics/"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
@@ -252,7 +252,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1flGTstCqzBLFgxskEu_kZ22aqH5FInpL?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/Ci/"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
@@ -266,7 +266,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1HAWwbQLRg5gDcFUYB36wNUEUOOFRgZYh?usp=sharing"
+                            <a href="https://notes.studytub.workers.dev/0:/First%20Year/mid%20term-endterm/"
                                 target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
