Update studytub sem 3 cse

--- a/pages/3rdsem/3rdsemcse.html
+++ b/pages/3rdsem/3rdsemcse.html
@@ -94,7 +94,7 @@
                     <div class="row">
                        
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1FjxFXxPDQv607Z8dS1bpvN6Ywr1Ecj3O?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/CSE-3rd-sem/Maths%203/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -108,7 +108,7 @@
                         </div>
                        
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/11pmgZgajPs9ExUHs0WmdZ3IG0JtHzDe4?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/CSE-3rd-sem/BME/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -121,7 +121,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1canvVQjnd4zALhKMnE45fp1DyD6zUpxg?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/CSE-3rd-sem/Dec/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -134,7 +134,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/12oeGyLngJo9Iyl5g6bwKmLCT9t9m9mUU?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/CSE-3rd-sem/DM/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -147,7 +147,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1bi4RqSdOAAAmLt_TzEjaEU5W-VD12sH2?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/CSE-3rd-sem/eco/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -160,7 +160,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/10qPtRjlExgPWywgVHAVtGwNP5PsQlEgW?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/CSE-3rd-sem/JAVA/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -173,7 +173,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1q8xY9-hnXfLCPgyIXvleLKSztFr_CfXt?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/CSE-3rd-sem/YOGA/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
