--- a/pages/3rdsemindex.html
+++ b/pages/3rdsemindex.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1qzXPW3v9C3R39hwTH2psiI8orv-ZdqmL?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/Sem_3_BTech_question%20paper/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
