Update studytub sem 3 ece

--- a/pages/3rdsem/3rdsemece.html
+++ b/pages/3rdsem/3rdsemece.html
@@ -90,7 +90,7 @@
                     <div class="row">
                        
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1nQ6dlSf4lcpPtmr-WsHNASDLnv51i1Cg?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/ECE-3rd-sem/MATH/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -103,7 +103,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1irUwkfm6iuvNHLzICkh-RJVu3QI_G0U0?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/ECE-3rd-sem/JAVA/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -116,7 +116,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1JmuSHu2BfFOubU9SaeAAYroEZ2RE2_h5?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/ECE-3rd-sem/YOGA/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -129,7 +129,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/15iOIf8hGC3sL7NLV5KBtzzXq2xtQVsC-?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/ECE-3rd-sem/Analog%20Communication/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -142,7 +142,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1mtCFHcvZmByv0jcwzvO-RRZ3mS7mZt-d?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/ECE-3rd-sem/CT/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -155,7 +155,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1LMexl2De5CZfB3cqxCDLk9FkYNwvcfAG?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/ECE-3rd-sem/Emw/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
