Update studytub sem 3 eee

--- a/pages/3rdsem/3rdsemeee.html
+++ b/pages/3rdsem/3rdsemeee.html
@@ -84,7 +84,7 @@
                     <div class="row">
                        
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1qWDh7surMlWSoupyABtdnH4owUT5U_Kk?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EEE-3rd-sem/MATH3/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -97,7 +97,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1irUwkfm6iuvNHLzICkh-RJVu3QI_G0U0?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EEE-3rd-sem/JAVA/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -110,7 +110,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1_XimYfTPd300SpBhhYONRKjpawkQnNTz?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EEE-3rd-sem/AEC/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -123,7 +123,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1V7ShwqLtAFavrv7cohCTHobkrpS_Yysi?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EEE-3rd-sem/MI/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -136,7 +136,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1uwIOdSpTZc_KEniqTDHeWQUFVdfQo9Eo?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EEE-3rd-sem/EM/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -149,7 +149,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1ZIJyDHDBVQ5j8xUhq_LnjZ2CuwcvGgmu?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EEE-3rd-sem/CT/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
