--- a/pages/3rdsem/3rdsemeie.html
+++ b/pages/3rdsem/3rdsemeie.html
@@ -88,7 +88,7 @@
                     <div class="row">
                        
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1kfzDD8CXlqRRwVubVn5_QRfnWPm3Hi5e?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EIE-3rd-sem/MATH/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -101,7 +101,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1irUwkfm6iuvNHLzICkh-RJVu3QI_G0U0?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EIE-3rd-sem/JAVA/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -114,7 +114,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1_XimYfTPd300SpBhhYONRKjpawkQnNTz?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EIE-3rd-sem/AEC/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -127,7 +127,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1p5kndn1wp2_RjBOKl6ThD2xSo6uYuZIw?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EIE-3rd-sem/EEC/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -140,7 +140,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1uwIOdSpTZc_KEniqTDHeWQUFVdfQo9Eo?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EEE-3rd-sem/EM/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -153,7 +153,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1ZIJyDHDBVQ5j8xUhq_LnjZ2CuwcvGgmu?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EEE-3rd-sem/CT/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -166,7 +166,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1TODJ9LsPrF12WqvoaJ5yyjfLhvbcM8Vv?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/EIE-3rd-sem/ELD/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
