--- a/pages/4thsem/4thsemece.html
+++ b/pages/4thsem/4thsemece.html
@@ -84,7 +84,7 @@
                     <div class="row">
                        
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1zXmtr50ZybSFDCTRqM5iJAPcn5fl5VP5?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/4th%20Sem/ECE_4th-sem/Math-4/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -97,7 +97,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/11pmgZgajPs9ExUHs0WmdZ3IG0JtHzDe4?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/4th%20Sem/ECE_4th-sem/BME/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -110,7 +110,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1canvVQjnd4zALhKMnE45fp1DyD6zUpxg?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/4th%20Sem/ECE_4th-sem/DEC/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -123,7 +123,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/15iOIf8hGC3sL7NLV5KBtzzXq2xtQVsC-?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/4th%20Sem/ECE_4th-sem/AC/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -136,7 +136,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/17cBmXo6ezp6GBEc5qkzL95tStKJ1tBOK?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/5th%20sem/Eie/Theory/PEV/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -149,7 +149,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1ygWh48fi2jl7w08Ok6ek4RLD4NNX4Vc8?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/4th%20Sem/ECE_4th-sem/PYTHON/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -162,7 +162,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1AOK8rfkhNqARxC4-s-iEYbe1ebdkzsCT?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/4th%20Sem/ECE_4th-sem/Os/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
