--- a/pages/4thsemindex.html
+++ b/pages/4thsemindex.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1DkR3-JN7j5WrkoZo3pjnhsiWC5O8UbPk?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/4th%20Sem/mid-end/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -138,7 +138,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://drive.google.com/drive/folders/1DEsnmrTGt0YN-cvlX3PdKs9-ay__34zL?usp=sharing" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/4th%20Sem/EIE_4th_sem/" target="_blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
